# sbl-debugger-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  server.json
src/sbl_debugger/: __init__.py  __main__.py  server.py  targets.py
src/sbl_debugger/bridge/: __init__.py  mi.py  types.py
src/sbl_debugger/process/: __init__.py  openocd.py  ports.py
src/sbl_debugger/session/: __init__.py  manager.py  session.py  state.py
src/sbl_debugger/svd/: __init__.py  loader.py  peripheral_db.py
src/sbl_debugger/tools/: advanced.py  breakpoints.py  capture.py  execution.py  inspection.py  peripheral.py  session.py  snapshot.py
tests/: test_advanced.py  test_breakpoints.py  test_bridge.py  test_execution.py  test_inspection.py  test_loader.py  test_peripheral.py  test_peripheral_db.py  test_ports.py  test_process.py  test_session.py  test_snapshot.py  test_source_context.py  test_targets.py  test_tools.py
