[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sbl-debugger"
version = "0.1.0"
description = "Embedded debug MCP server — GDB/MI + OpenOCD for ARM Cortex-M"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Sound Byte Labs" }]
keywords = ["mcp", "debugger", "embedded", "gdb", "openocd", "arm", "cortex-m"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp",
    "pygdbmi",
]

[project.urls]
Repository = "https://github.com/soundbytelabs/sbl-debugger-mcp"

[project.optional-dependencies]
svd = [
    "cecrops",
]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sbl_debugger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
